k8s/local/test-deployment/nodeport-service.yaml
---
# NodePort service for direct local access to S3 Manager
# Access at: http://localhost:30080
apiVersion: v1
kind: Service
metadata:
  name: s3-manager-nodeport
  namespace: s3-manager-test
  labels:
    app: s3-manager
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: http
    nodePort: 30080
    protocol: TCP
  selector:
    app: s3-manager
